# crazy_frog

./: CMakeLists.txt  Gameplan.md  GestureIdeas.md  LICENSE  README.md  package.xml
classification_data/: 0RawData.pkl  1RawData.pkl  2RawData.pkl  3RawData.pkl  4RawData.pkl  5RawData.pkl  6RawData.pkl  7RawData.pkl  8RawData.pkl  9RawData.pkl  CallMacroRawData.pkl  DigitRawData.pkl  ENDRawData.pkl  MoveXRawData.pkl  MoveYRawData.pkl  MoveZRawData.pkl  NOPRawData.pkl  NegateRawData.pkl  RecordMacroRawData.pkl  RepeatRawData.pkl  RunRawData.pkl  SetNumberVarRawData.pkl  WaitRawData.pkl  indexFingerRawData.pkl  testRawData.pkl  waitRawData.pkl
classification_data/backup/: 7RawData.pkl
classification_data/backup/classifier_output/: class_gesture_dict.pkl
classification_data/classifier_output/: class_gesture_dict.pkl  classifier.pkl  pca.pkl
launch/: gesture_recognition.launch
msg/: CompilerData.msg  MacroRequest.msg
scripts/: gestureClasses.py  gestureClassifier.py  gestureInfo.py  nonROScompiler.py
simulation/: crazyflieSim.ttt
src/: GUI.py  classification.py  classificationDataCollector.py  classificationExample.py  compilerTester.py  csv  gestureClasses.py  gestureClassifier.py  gestureCompiler.py  gestureInfo.py  gestureRecognizer.py  gui.py  runtime.cpp  start.py
